# assignment-data-viz

./: .gitignore  .gitmodules  entry.py  pyproject.toml  test.py
.github/workflows/: ci.yml  update.yml
data/output/: distributions.json  flags.json  languages.json
frontend/: eslint.config.js  package.json  svelte.config.js  uno.config.ts  vite.config.ts
frontend/src/: app.html
frontend/src/components/: Bar.svelte  Pie.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
frontend/src/routes/ppt/: +layout.svelte
frontend/src/routes/ppt/0/: +page.svelte
frontend/src/routes/ppt/1/: +page.svelte
frontend/src/routes/ppt/2/: +page.svelte
frontend/src/routes/ppt/3/: +page.svelte
frontend/src/routes/ppt/4/: +page.svelte
frontend/src/routes/ppt/5/: +page.svelte
frontend/src/routes/ppt/6/: +page.svelte
src/: __init__.py  distributions.py  languages.py  moderations.py
src/core/: count.py  moderate.py  parse.py
src/types/: chatlog.py  moderations.py
src/utils/: language.py  moderate.py  multiprocessing.py  output.py  parse.py  path.py  sk_pool.py  sum.py  sync.py
