[project]
name = "chatlog-viz"
version = "0"
requires-python = "~=3.12"
dependencies = [
    "promplate~=0.3.4.7",
    "blosc2~=2.6.2",
    "msgspec~=0.18.6",
    "attrs~=23.2.0",
    "alive-progress~=3.1.5",
    "openai~=1.30.3",
    "aiofiles~=23.2.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = { composite = ["ruff check --fix --exit-zero", "ruff format"] }

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.4.4", "python-dotenv>=1.0.1"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pep8-naming
    "N",
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # ruff
    "RUF",
]
