[project]
name = "chatlog-viz"
version = "0"
requires-python = "~=3.12"
dependencies = [
    "promplate~=0.3.5.1",
    "blosc2~=2.7.1",
    "msgspec~=0.19.0",
    "attrs~=25.4.0",
    "alive-progress~=3.3.0",
    "openai~=2.3.0",
    "aiofiles~=25.1.0",
    "promptools[tokenizer]~=0.1.3.5",
    "lingua-language-detector~=2.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = { composite = ["ruff check --fix --exit-zero", "ruff format"] }

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.4.4", "python-dotenv>=1.0.1"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pep8-naming
    "N",
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # ruff
    "RUF",
]
